samples/_failures_safe/1761073438_1c55a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7aba5f2c.c: In function ‘print_state’:
./samples/SAFE/__tmp_7aba5f2c.c:160:56: error: expected ‘]’ at end of input
  160 |         printf("Current state: %s\n", state_names[state
      |                                                        ^
      |                                                        ]
./samples/SAFE/__tmp_7aba5f2c.c:160:9: error: expected declaration or statement at end of input
  160 |         printf("Current state: %s\n", state_names[state
      |         ^~~~~~
./samples/SAFE/__tmp_7aba5f2c.c:160:9: error: expected declaration or statement at end of input
